Recibir Json de una url

--- a/parcial/views/layout.ejs
+++ b/parcial/views/layout.ejs
@@ -60,7 +60,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -88,10 +88,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
-    <script type="text/javascript">
-      io.sails.url = 'localhost:8080';
-    </script>
+    <script src="/js/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
